@@ -1,5 +1,11 @@
 2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03598] restore cursor when download list panel is updated.
+	* main.c (stopDownload): delete->replace
+		(ldDL): use DownloadListBuffer()
+
+2002-12-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03597] Re: meta refresh
 	* main.c (Event): next, linked list
 		(N_EVENT_QUEUE): deleted
